[package]
name = "pngpangbam"
description = "A command line interface for the PNGPANGBAM implementation of PNGme."
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pngpanglib = {path = "../pngpanglib", features = ["clap"]}
clap = { workspace = true, features = ["derive"] }

