[package]
name = "pngpanglib"
description = "Library details of PNGPANGBAM, implementation of PNGme."
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.1.0"
clap = { workspace = true, features = ["derive"], optional = true }
